revealParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .revealListener import revealListener
else:
    from revealListener import revealListener


class revealParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'$'", u"'&'", 
                     u"'-'", u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'\n'" ]

    symbolicNames = [ u"<INVALID>", u"SLIDE", u"SLIDE2", u"CONFIG", u"FORMAT", 
                      u"DASH", u"QUOTE", u"WORD", u"DASHWORD", u"ALPHANUM", 
                      u"LETTER", u"NUMBER", u"DIGIT", u"SYMBOL", u"NL", 
                      u"WS" ]

    RULE_slideshow = 0
    RULE_slide = 1
    RULE_title = 2
    RULE_body = 3
    RULE_config = 4
    RULE_option = 5
    RULE_formatting = 6
    RULE_setting = 7
    RULE_text = 8

    ruleNames =  [ "slideshow", "slide", "title", "body", "config", "option", 
                   "formatting", "setting", "text" ]

    EOF = Token.EOF
    SLIDE=1
    SLIDE2=2
    CONFIG=3
    FORMAT=4
    DASH=5
    QUOTE=6
    WORD=7
    DASHWORD=8
    ALPHANUM=9
    LETTER=10
    NUMBER=11
    DIGIT=12
    SYMBOL=13
    NL=14
    WS=15

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



        class Globals:
            def __init__(self):
            
                class Slideshow:
                    def __init__(self):
                        self.slides = []
                    def addSlide(self, slide):
                        slide.title = slide.title[1:]
                        if (slide.title[0] == '@'): # Is child
                            self.slides[-1].child = slide
                        else:
                            self.slides.append(slide)

                self.Slideshow = Slideshow
                self.slideshow = self.Slideshow()

                class Slide:
                    def __init__(self, title, body):
                        self.title = title
                        self.body = body
                        self.child = None
                self.Slide = Slide

            def printSlides(self):
                for slide in self.slideshow.slides:
                    print("{}:\n{}".format(slide.title, slide.body))
                    if slide.child:
                            print("\t{}:\n\t{}".format(slide.child.title, slide.child.body))
        self.globals = Globals()

        


    class SlideshowContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(revealParser.EOF, 0)

        def config(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(revealParser.ConfigContext)
            else:
                return self.getTypedRuleContext(revealParser.ConfigContext,i)


        def formatting(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(revealParser.FormattingContext)
            else:
                return self.getTypedRuleContext(revealParser.FormattingContext,i)


        def slide(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(revealParser.SlideContext)
            else:
                return self.getTypedRuleContext(revealParser.SlideContext,i)


        def getRuleIndex(self):
            return revealParser.RULE_slideshow

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterSlideshow(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitSlideshow(self)




    def slideshow(self):

        localctx = revealParser.SlideshowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_slideshow)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==revealParser.CONFIG:
                self.state = 18
                self.config()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==revealParser.FORMAT:
                self.state = 24
                self.formatting()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.slide()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==revealParser.SLIDE or _la==revealParser.SLIDE2):
                    break

            self.state = 35
            self.match(revealParser.EOF)
            self.globals.printSlides()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SlideContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var_title = None # TitleContext
            self.var_body = None # BodyContext

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(revealParser.NL)
            else:
                return self.getToken(revealParser.NL, i)

        def title(self):
            return self.getTypedRuleContext(revealParser.TitleContext,0)


        def body(self):
            return self.getTypedRuleContext(revealParser.BodyContext,0)


        def getRuleIndex(self):
            return revealParser.RULE_slide

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterSlide(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitSlide(self)




    def slide(self):

        localctx = revealParser.SlideContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_slide)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            localctx.var_title = self.title()
            self.state = 39
            self.match(revealParser.NL)
            self.state = 40
            localctx.var_body = self.body()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==revealParser.NL:
                self.state = 41
                self.match(revealParser.NL)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.globals.slideshow.addSlide(self.globals.Slide((None if localctx.var_title is None else self._input.getText((localctx.var_title.start,localctx.var_title.stop))),(None if localctx.var_body is None else self._input.getText((localctx.var_body.start,localctx.var_body.stop)))))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TitleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var_format = None # Token
            self.var_title = None # TextContext

        def text(self):
            return self.getTypedRuleContext(revealParser.TextContext,0)


        def SLIDE(self):
            return self.getToken(revealParser.SLIDE, 0)

        def SLIDE2(self):
            return self.getToken(revealParser.SLIDE2, 0)

        def getRuleIndex(self):
            return revealParser.RULE_title

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterTitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitTitle(self)




    def title(self):

        localctx = revealParser.TitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_title)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            localctx.var_format = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==revealParser.SLIDE or _la==revealParser.SLIDE2):
                localctx.var_format = self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 50
            localctx.var_title = self.text()
            #System.out.println((None if localctx.var_title is None else self._input.getText((localctx.var_title.start,localctx.var_title.stop))))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(revealParser.TextContext)
            else:
                return self.getTypedRuleContext(revealParser.TextContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(revealParser.NL)
            else:
                return self.getToken(revealParser.NL, i)

        def getRuleIndex(self):
            return revealParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitBody(self)




    def body(self):

        localctx = revealParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.text()
                self.state = 54
                self.match(revealParser.NL)
                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << revealParser.WORD) | (1 << revealParser.ALPHANUM) | (1 << revealParser.SYMBOL))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConfigContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONFIG(self):
            return self.getToken(revealParser.CONFIG, 0)

        def WORD(self):
            return self.getToken(revealParser.WORD, 0)

        def option(self):
            return self.getTypedRuleContext(revealParser.OptionContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(revealParser.NL)
            else:
                return self.getToken(revealParser.NL, i)

        def getRuleIndex(self):
            return revealParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitConfig(self)




    def config(self):

        localctx = revealParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_config)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(revealParser.CONFIG)
            self.state = 61
            self.match(revealParser.WORD)
            self.state = 62
            self.option()
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.match(revealParser.NL)
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==revealParser.NL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(revealParser.WORD, 0)

        def ALPHANUM(self):
            return self.getToken(revealParser.ALPHANUM, 0)

        def NUMBER(self):
            return self.getToken(revealParser.NUMBER, 0)

        def getRuleIndex(self):
            return revealParser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitOption(self)




    def option(self):

        localctx = revealParser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_option)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << revealParser.WORD) | (1 << revealParser.ALPHANUM) | (1 << revealParser.NUMBER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormattingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FORMAT(self):
            return self.getToken(revealParser.FORMAT, 0)

        def WORD(self):
            return self.getToken(revealParser.WORD, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(revealParser.NL)
            else:
                return self.getToken(revealParser.NL, i)

        def setting(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(revealParser.SettingContext)
            else:
                return self.getTypedRuleContext(revealParser.SettingContext,i)


        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(revealParser.OptionContext)
            else:
                return self.getTypedRuleContext(revealParser.OptionContext,i)


        def getRuleIndex(self):
            return revealParser.RULE_formatting

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterFormatting(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitFormatting(self)




    def formatting(self):

        localctx = revealParser.FormattingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formatting)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(revealParser.FORMAT)
            self.state = 71
            self.match(revealParser.WORD)
            self.state = 72
            self.match(revealParser.NL)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 73
                self.setting()
                self.state = 74
                self.option()
                self.state = 75
                self.match(revealParser.NL)
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==revealParser.WORD or _la==revealParser.DASHWORD):
                    break

            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==revealParser.NL:
                self.state = 81
                self.match(revealParser.NL)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SettingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASHWORD(self):
            return self.getToken(revealParser.DASHWORD, 0)

        def WORD(self):
            return self.getToken(revealParser.WORD, 0)

        def getRuleIndex(self):
            return revealParser.RULE_setting

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterSetting(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitSetting(self)




    def setting(self):

        localctx = revealParser.SettingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_setting)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==revealParser.WORD or _la==revealParser.DASHWORD):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(revealParser.WORD)
            else:
                return self.getToken(revealParser.WORD, i)

        def ALPHANUM(self, i:int=None):
            if i is None:
                return self.getTokens(revealParser.ALPHANUM)
            else:
                return self.getToken(revealParser.ALPHANUM, i)

        def SYMBOL(self, i:int=None):
            if i is None:
                return self.getTokens(revealParser.SYMBOL)
            else:
                return self.getToken(revealParser.SYMBOL, i)

        def getRuleIndex(self):
            return revealParser.RULE_text

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.enterText(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, revealListener ):
                listener.exitText(self)




    def text(self):

        localctx = revealParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 89
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << revealParser.WORD) | (1 << revealParser.ALPHANUM) | (1 << revealParser.SYMBOL))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 92 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << revealParser.WORD) | (1 << revealParser.ALPHANUM) | (1 << revealParser.SYMBOL))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx




